--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
-    <title>NovaComm</title>
+    <title>QuickChat</title>
     <link rel="icon" type="image/png" href="https://i.ibb.co/F4b8wMcd/imagine-draw-chat-app-logo-1755450297617-removebg-preview.png" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -874,7 +875,7 @@
                     <input type="password" id="login-password" placeholder="Password" required>
                 </div>
                 <button class="btn" id="login-btn">Login</button>
-               
+                <button class="btn btn-google" id="google-login-btn">Login with Google</button>
                 <p class="toggle-form">Don't have an account? <a href="#" id="show-register">Register</a></p>
             </div>
             <div id="register-form" style="display: none;">
@@ -898,7 +899,7 @@
     <div id="main-container">
         <header>
             <div class="logo">
-                <img src="https://i.ibb.co/F4b8wMcd/imagine-draw-chat-app-logo-1755450297617-removebg-preview.png" alt="">NovaComm</div>
+                <img src="https://i.ibb.co/F4b8wMcd/imagine-draw-chat-app-logo-1755450297617-removebg-preview.png" alt="">QuickChat</div>
             <div class="icons">
                 <span class="material-icons" id="profile-icon">person</span>
                 <span class="material-icons" id="qr-icon">qr_code_scanner</span>
@@ -1115,15 +1116,12 @@
     <script>
         // --- FIREBASE INITIALIZATION ---
 const firebaseConfig = {
-   apiKey: "AIzaSyA6s_TXAIrAhyCZ0yyjo4TJ8HFfSagb3as",
-  authDomain: "chatnox-cdc0e.firebaseapp.com",
-  databaseURL: "https://chatnox-cdc0e-default-rtdb.firebaseio.com",
-  projectId: "chatnox-cdc0e",
-  storageBucket: "chatnox-cdc0e.firebasestorage.app",
-  messagingSenderId: "744129197345",
-  appId: "1:744129197345:web:6fb3b81f6cd194216e3a60"
-
-
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_AUTH_DOMAIN",
+    projectId: "YOUR_PROJECT_ID",
+    storageBucket: "YOUR_STORAGE_BUCKET",
+    messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+    appId: "YOUR_APP_ID"
 };
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
@@ -1488,7 +1486,7 @@ const firebaseConfig = {
                 if (!email || !password) { showNotification('Please enter all fields', 'error'); return; }
                 auth.signInWithEmailAndPassword(email, password).catch(err => showNotification(err.message, 'error'));
             });
-           
+            document.getElementById('google-login-btn').addEventListener('click', () => auth.signInWithPopup(googleProvider).then(res => handleNewUser(res.user, res.user.displayName)).catch(err => showNotification(err.message, 'error')));
             document.getElementById('register-btn').addEventListener('click', () => {
                 const name = document.getElementById('register-name').value, email = document.getElementById('register-email').value, password = document.getElementById('register-password').value;
                 if (!name || !email || !password) { showNotification('Please fill all fields', 'error'); return; }
@@ -1891,38 +1889,6 @@ const firebaseConfig = {
             });
         }
     </script>
-    <!-- Top navigation bar -->
-<header id="topbar">
-  <!-- Hamburger icon (three horizontal lines) -->
-  <button id="menu-toggle" aria-label="Open About">
-    &#9776;
-  </button>
-</header>
-
-<!-- About Section (hidden by default, shown when toggled) -->
-<section id="about" class="about-section" hidden>
-  <h2>About Novacomm</h2>
-  <p>
-    Novacomm is a modern chatting platform that lets you connect with your friends 
-    through instant messaging, audio calls, and video calls — all in one place.  
-  </p>
-  <p>
-    Our mission is to make communication simple, secure, and enjoyable. Whether 
-    you're sharing quick messages or having face-to-face video chats, Novacomm 
-    brings you closer to the people who matter.
-  </p>
-
-  <ul>
-    <li>🔒 Encrypted messaging for privacy</li>
-    <li>📞 High-quality audio & video calls</li>
-    <li>💬 Simple and clean interface</li>
-    <li>🌍 Stay connected anytime, anywhere</li>
-  </ul>
-
-  <footer class="about-footer">
-    <p><strong>Created by:</strong> Priyanshu Pandey</p>
-  </footer>
-</section>
-
 </body>
 </html>
+
