--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
-    <title>QuickChat</title>
+    <title>NovaComm</title>
     <link rel="icon" type="image/png" href="https://i.ibb.co/F4b8wMcd/imagine-draw-chat-app-logo-1755450297617-removebg-preview.png" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -899,7 +899,7 @@
     <div id="main-container">
         <header>
             <div class="logo">
-                <img src="https://i.ibb.co/F4b8wMcd/imagine-draw-chat-app-logo-1755450297617-removebg-preview.png" alt="">QuickChat</div>
+                <img src="https://i.ibb.co/F4b8wMcd/imagine-draw-chat-app-logo-1755450297617-removebg-preview.png" alt="">NovaComm</div>
             <div class="icons">
                 <span class="material-icons" id="profile-icon">person</span>
                 <span class="material-icons" id="qr-icon">qr_code_scanner</span>
@@ -1116,12 +1116,14 @@
     <script>
         // --- FIREBASE INITIALIZATION ---
 const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_AUTH_DOMAIN",
-    projectId: "YOUR_PROJECT_ID",
-    storageBucket: "YOUR_STORAGE_BUCKET",
-    messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-    appId: "YOUR_APP_ID"
+     apiKey: "AIzaSyA6s_TXAIrAhyCZ0yyjo4TJ8HFfSagb3as",
+  authDomain: "chatnox-cdc0e.firebaseapp.com",
+  databaseURL: "https://chatnox-cdc0e-default-rtdb.firebaseio.com",
+  projectId: "chatnox-cdc0e",
+  storageBucket: "chatnox-cdc0e.firebasestorage.app",
+  messagingSenderId: "744129197345",
+  appId: "1:744129197345:web:6fb3b81f6cd194216e3a60",
+  measurementId: "G-Z14LLT13TF"
 };
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
@@ -1891,4 +1893,5 @@ const firebaseConfig = {
     </script>
 </body>
 </html>
+
 
