--- a/index.html
+++ b/index.html
@@ -1116,14 +1116,13 @@
     <script>
         // --- FIREBASE INITIALIZATION ---
 const firebaseConfig = {
-     apiKey: "AIzaSyA6s_TXAIrAhyCZ0yyjo4TJ8HFfSagb3as",
-  authDomain: "chatnox-cdc0e.firebaseapp.com",
-  databaseURL: "https://chatnox-cdc0e-default-rtdb.firebaseio.com",
-  projectId: "chatnox-cdc0e",
-  storageBucket: "chatnox-cdc0e.firebasestorage.app",
-  messagingSenderId: "744129197345",
-  appId: "1:744129197345:web:6fb3b81f6cd194216e3a60",
-  measurementId: "G-Z14LLT13TF"
+    apiKey: "AIzaSyAsC1EBUH38a4FcVmIcV7Go5Kr-DU11P08",
+  authDomain: "novacomm-ef8c2.firebaseapp.com",
+  databaseURL: "https://novacomm-ef8c2-default-rtdb.firebaseio.com",
+  projectId: "novacomm-ef8c2",
+  storageBucket: "novacomm-ef8c2.firebasestorage.app",
+  messagingSenderId: "689779091571",
+  appId: "1:689779091571:web:148d28f37b01b90fdf2206"
 };
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
@@ -1893,5 +1892,6 @@ const firebaseConfig = {
     </script>
 </body>
 </html>
+
 
 
